fig 6 (mdb heatmap

--- a/analysis/Subset_to_MDB_and_calculate_drought_metrics.ipynb
+++ b/analysis/Subset_to_MDB_and_calculate_drought_metrics.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,8 @@
     "mri_annual_cntl_aus = xr.open_dataset('%s/mri_precip_cntl_annual_aus.nc' % input_dir_ctrl)\n",
     "giss_3_annual_cntl_aus = xr.open_dataset('%s/giss_3_precip_cntl_annual_aus.nc' % input_dir_ctrl)\n",
     "giss_1_annual_cntl_aus = xr.open_dataset('%s/giss_1_precip_cntl_annual_aus.nc' % input_dir_ctrl)\n",
-    "giss_41_annual_cntl_aus = xr.open_dataset('%s/giss_41_precip_cntl_annual_aus.nc' % input_dir_ctrl)"
+    "giss_41_annual_cntl_aus = xr.open_dataset('%s/giss_41_precip_cntl_annual_aus.nc' % input_dir_ctrl)\n",
+    "cesmlme_annual_cntl_aus = xr.open_dataset('%s/cesmlme_precip_cntl_annual_aus.nc' % input_dir_ctrl)"
    ]
   },
   {
@@ -489,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,12 +961,13 @@
     "mri_annual_cntl_mdb         = get_mdb_mean(mri_annual_cntl_aus)\n",
     "giss_3_annual_cntl_mdb      = get_mdb_mean(giss_3_annual_cntl_aus)\n",
     "giss_1_annual_cntl_mdb      = get_mdb_mean(giss_1_annual_cntl_aus)\n",
-    "giss_41_annual_cntl_mdb     = get_mdb_mean(giss_41_annual_cntl_aus)\n"
+    "giss_41_annual_cntl_mdb     = get_mdb_mean(giss_41_annual_cntl_aus)\n",
+    "cesmlme_annual_cntl_mdb     = get_mdb_mean(cesmlme_annual_cntl_aus)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,22 +983,15 @@
     "mri_annual_cntl_mdb_rc        = droughts_lastmillennium_fromyear(mri_annual_cntl_mdb, mri_annual_cntl_mdb.year[0].values, mri_annual_cntl_mdb.year[-1].values)\n",
     "giss_3_annual_cntl_mdb_rc     = droughts_lastmillennium_fromyear(giss_3_annual_cntl_mdb, giss_3_annual_cntl_mdb.year[0].values, giss_3_annual_cntl_mdb.year[-1].values)\n",
     "giss_1_annual_cntl_mdb_rc     = droughts_lastmillennium_fromyear(giss_1_annual_cntl_mdb, giss_1_annual_cntl_mdb.year[0].values, giss_1_annual_cntl_mdb.year[-1].values)\n",
-    "giss_41_annual_cntl_mdb_rc    = droughts_lastmillennium_fromyear(giss_41_annual_cntl_mdb, giss_41_annual_cntl_mdb.year[0].values, giss_41_annual_cntl_mdb.year[-1].values)\n"
+    "giss_41_annual_cntl_mdb_rc    = droughts_lastmillennium_fromyear(giss_41_annual_cntl_mdb, giss_41_annual_cntl_mdb.year[0].values, giss_41_annual_cntl_mdb.year[-1].values)\n",
+    "cesmlme_annual_cntl_mdb_rc    = droughts_lastmillennium_fromyear(cesmlme_annual_cntl_mdb, cesmlme_annual_cntl_mdb.year[0].values, cesmlme_annual_cntl_mdb.year[-1].values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... Creating ../files/control/mdb now \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ctrl_mdb_dir = '../files/control/mdb'\n",
     "if not os.path.exists(ctrl_mdb_dir):\n",
@@ -1006,13 +1001,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[########################################] | 100% Completed |  0.1s\n",
       "[########################################] | 100% Completed |  0.1s\n",
       "[########################################] | 100% Completed |  0.1s\n",
       "[########################################] | 100% Completed |  0.1s\n",
@@ -1042,7 +1038,8 @@
     "save_netcdf_compression(mri_annual_cntl_mdb_rc, ctrl_mdb_dir, 'mri_annual_cntl_mdb')\n",
     "save_netcdf_compression(giss_3_annual_cntl_mdb_rc, ctrl_mdb_dir, 'giss_3_annual_cntl_mdb')\n",
     "save_netcdf_compression(giss_1_annual_cntl_mdb_rc, ctrl_mdb_dir, 'giss_1_annual_cntl_mdb')\n",
-    "save_netcdf_compression(giss_41_annual_cntl_mdb_rc, ctrl_mdb_dir, 'giss_41_annual_cntl_mdb')\n"
+    "save_netcdf_compression(giss_41_annual_cntl_mdb_rc, ctrl_mdb_dir, 'giss_41_annual_cntl_mdb')\n",
+    "save_netcdf_compression(cesmlme_annual_cntl_mdb_rc, ctrl_mdb_dir, 'cesmlme_annual_cntl_mdb')"
    ]
   },
   {
